--- a/api/templates/about.html
+++ b/api/templates/about.html
@@ -3,7 +3,7 @@
 <!-- Page Header-->
 <header
   class="masthead"
-  style="background-image: url('../static/assets/img/about-bg.jpg')"
+  style="background-image: url('../static/assets/img/home-X.jpg')"
 >
   <div class="container position-relative px-4 px-lg-5">
     <div class="row gx-4 gx-lg-5 justify-content-center">
@@ -22,22 +22,13 @@
     <div class="row gx-4 gx-lg-5 justify-content-center">
       <div class="col-md-10 col-lg-8 col-xl-7">
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe
-          nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis
-          sit soluta odio, adipisci quas excepturi maxime quae totam ducimus
-          consectetur?
+          my name is Mina Emad and this is my personal webiste to share my ideas to the world, I have broad range of interests from physics, chemistry,engneering ,reading History,and finally Computer Science.
         </p>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius
-          praesentium recusandae illo eaque architecto error, repellendus iusto
-          reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in
-          officia voluptas voluptatibus, minus!
+       انا مينا عماد  و دا الموقع الخاص بيا و اللي بعرض فية ارائي و مشروعاتي الشخصية,انا عندي اهتمامات متعددة من الالعلوم الطبيعية لعلوم الحاسب للتاريخ و الادب
         </p>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut
-          consequuntur magnam, excepturi aliquid ex itaque esse est vero natus
-          quae optio aperiam soluta voluptatibus corporis atque iste neque sit
-          tempora!
+
         </p>
       </div>
     </div>
