--- a/api/templates/make-post.html
+++ b/api/templates/make-post.html
@@ -4,7 +4,7 @@ include "header.html" %}
 <!-- Page Header -->
 <header
   class="masthead"
-  style="background-image: url('../static/assets/img/edit-bg.jpg')"
+  style="background-image: url('../static/assets/img/home-X.jpg')"
 >
   <div class="container position-relative px-4 px-lg-5">
     <div class="row gx-4 gx-lg-5 justify-content-center">
@@ -30,6 +30,17 @@ include "header.html" %}
       <div class="col-lg-8 col-md-10 mx-auto">
         {{ ckeditor.load() }} {{ ckeditor.config(name='body') }} {{
         render_form(form, novalidate=True, button_map={"submit": "primary"}) }}
+      </div>
+    </div>
+  </div>
+</main>
+
+<main class="mb-4">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-8 col-md-10 mx-auto">
+        {{
+         render_form(form2, novalidate=True, button_map={"submit": "primary"}) }}
       </div>
     </div>
   </div>
