--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -3,23 +3,48 @@
 <!-- Page Header-->
 <header
   class="masthead"
-  style="background-image: url('../static/assets/img/home-bg.jpg')"
+  style="background-image: url('../static/assets/img/home-X.jpg')"
 >
-  <div class="container position-relative px-4 px-lg-5">
-    <div class="row gx-4 gx-lg-5 justify-content-center">
+  <div class="container position-relative  px-4 px-lg-5">
+    <div class="row gx-4 gx-lg-5 justify-content-start">
       <div class="col-md-10 col-lg-8 col-xl-7">
         <div class="site-heading">
-          <h1>Angela's Blog</h1>
-          <span class="subheading">A collection of random musings.</span>
+          <h1>Ishraqaat</h1>
+          <!-- <h1>اشراقات</h1> -->
+          <span class="subheading">From the logic gates and up</span>
         </div>
       </div>
     </div>
   </div>
 </header>
+
+
 <!-- Main Content-->
+
 <div class="container px-4 px-lg-5">
-  <div class="row gx-4 gx-lg-5 justify-content-center">
-    <div class="col-md-10 col-lg-8 col-xl-7">
+  <div class="row gx-4 gx-lg-5 justify-content-start" >
+    <div class="col-4">
+      <div class="b-example-divider b-example-vr"></div>
+<div class="d-flex flex-column align-items-stretch flex-shrink-0 bg-body-tertiary" style="width: 380px;">
+  <a href="/" class="d-flex align-items-center flex-shrink-0 p-3 link-body-emphasis text-decoration-none border-bottom">
+    <svg class="bi pe-none me-2" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
+    <span class="fs-5 fw-semibold">All Posts</span>
+  </a>
+  {% for category in categories%}
+  <div class="list-group list-group-flush border-bottom scrollarea">
+    <a href="{{url_for('show_category' , category_id=category.id)}}" class="list-group-item list-group-item-action active py-3 lh-sm" aria-current="true">
+      <div class="d-flex w-100 align-items-center justify-content-between">
+        <strong class="mb-1">{{category.id}}</strong>
+        <small></small>
+      </div>
+      <div class="col-10 mb-1 small">{{category.category}}</div>
+    </a>
+  </div>
+  {% endfor %}
+</div>
+<div class="b-example-divider b-example-vr"></div>
+    </div>
+    <div class="col-8">
       <!-- Post preview-->
       {% for post in all_posts %}
       <div class="post-preview">
@@ -54,9 +79,9 @@
       </div>
       {% endif %}
       <!-- Pager-->
-      <div class="d-flex justify-content-end mb-4">
+      <!-- <div class="d-flex justify-content-end mb-4">
         <a class="btn btn-secondary text-uppercase" href="#!">Older Posts →</a>
-      </div>
+      </div> -->
     </div>
   </div>
 </div>
