--- a/api/templates/post.html
+++ b/api/templates/post.html
@@ -26,6 +26,7 @@
     <div class="row gx-4 gx-lg-5 justify-content-center">
       <div class="col-md-10 col-lg-8 col-xl-7">
         {{ post.body|safe }}
+        <a href="{{ post.link_url }}">Post Link</a>
         <!--TODO: Only show Edit Post button if user id is 1 (admin user) -->
         {% if current_user.id == 1 %}
         <div class="d-flex justify-content-end mb-4">
