--- a/api/templates/about.html
+++ b/api/templates/about.html
@@ -22,7 +22,7 @@
     <div class="row gx-4 gx-lg-5 justify-content-center">
       <div class="col-md-10 col-lg-8 col-xl-7">
         <p>
-          my name is Mina Emad and this is my personal webiste to share my ideas to the world, I have broad range of interests from physics, chemistry,engneering ,reading History,and finally Computer Science.
+          my name is Mina Emad, I'm a pharmacist with architectural-designer mindset and this is my personal webiste to share my Eureka Moments to the world, I have broad range of interests from physics, chemistry,engneering ,reading History,and finally Computer Science.
         </p>
         <p>
        انا مينا عماد  و دا الموقع الخاص بيا و اللي بعرض فية ارائي و مشروعاتي الشخصية,انا عندي اهتمامات متعددة من الالعلوم الطبيعية لعلوم الحاسب للتاريخ و الادب
