--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -10,7 +10,7 @@
       <div class="col-md-10 col-lg-8 col-xl-7">
         <div class="site-heading">
           <h1>Ishraqaat</h1>
-          <!-- <h1>اشراقات</h1> -->
+          <h1 class="justify-content-end">اشراقات</h1>
           <span class="subheading">From the logic gates and up</span>
         </div>
       </div>
